tests/fixtures/functional_patterns/negative/n41_thread_spawn.rs
use std::thread;

fn spawn_worker() {
    thread::spawn(|| {
        println!("Working");
    });
}
